fix: autoplay video on ios

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -6,7 +6,7 @@
   width: 100vw;
   max-width: 110rem;
   flex-direction: row-reverse;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
   position: relative;
